--- a/template/partials/header.hbs
+++ b/template/partials/header.hbs
@@ -1,6 +1,6 @@
 <div class="head">
     <div class="iconImg"><img src="/img/weather.png" alt="Icon"></div>
-    <h1>{{title}}<small>Search For Weather Forcast in Your Location</small></h1>
+    <h1 class="fs-1 fw-bold">{{title}}<small class="fs-6 fw-light">Search For Weather Forcast in Your Location</small></h1>
 </div>
 <div>
     <ul>
