--- a/template/views/about.hbs
+++ b/template/views/about.hbs
@@ -7,13 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="icon" href="/img/weather.png">
-    <title>Document</title>
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <title>Weather App</title>
 </head>
 
 <body>
     <main>
         {{>header}}
     <p>About Page!</p>
+    This site was created by Awesome. It uses data from mapbox.com and darksky.net!
     <div class="img">
         <img src="/img/pic1.jpg" alt="Rock">
     </div>
