--- a/template/views/index.hbs
+++ b/template/views/index.hbs
@@ -8,21 +8,29 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="icon" href="/img/weather.png">
     <title>Weather App</title>
+        <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+
 </head>
 
-<body>
+<body class="bg-light">
     <main>
-        {{>header}}
-        <p>Weather! <small>Forcast.</small></p>
-        
-        <form>
-            <input type="text" placeholder="Location">
-            <button>Search</button>
-        </form>
-        <div class="container"></div>
-        <div class="container2"></div>
-    </main>
+        <div class="main">
+                {{>header}}
+            <p class="fs-2 fw-bold">Weather! <small class="fs-6 fw-light">Forcast.</small></p>
+            
+            <form>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="Location" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                    <button class="input-group-text" id="basic-addon2">Search</button>
+                </div>
+            </form>
+            <div class="container"></div>
+            <div class="container"></div>
+        </div>
         {{>footer}}
+    </main>
+        
     <script src="js/index.js"></script>
 </body>
 
